--- a/application.yaml
+++ b/application.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://github.com/Anil-trees/sample-deploy.git
     targetRevision: HEAD
-    path: /
+    path: dev
   destination: 
     server: https://kubernetes.default.svc
     namespace: myapp
