--- a/dev/nginx-deploy.yaml
+++ b/dev/nginx-deploy.yaml
@@ -1,19 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: nginx-deployment
 spec:
+  replicas: 3
   selector:
     matchLabels:
-      app: myapp
-  replicas: 2
+      app: nginx
   template:
     metadata:
       labels:
-        app: myapp
+        app: nginx
     spec:
       containers:
-      - name: myapp
-        image: nanajanashia/argocd-app:1.2
+      - name: nginx
+        image: nginx:latest
         ports:
-        - containerPort: 8080
+        - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: nginx
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
